tests/snapshots/snapshots__interpreter@local_polymorphic_let.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/local_polymorphic_let.pr
---
1
hi
=> ()
