tests/snapshots/snapshots__interpreter@loop_break.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/loop_break.pr
---
111
5
12
=> ()
