tests/snapshots/snapshots__interpreter@loop_control.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/loop_control.pr
---
64
8
10
=> ()
