tests/snapshots/snapshots__interpreter@looptest.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/looptest.pr
---
10
9
8
7
6
5
4
3
2
1
=> ()
