tests/snapshots/snapshots__interpreter@main_heap_result.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/main_heap_result.pr
---
=> result
