tests/snapshots/snapshots__interpreter@main_returns_int.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/main_returns_int.pr
---
42
=> 42
