tests/snapshots/snapshots__interpreter@map_newtype.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/map_newtype.pr
---
2
1
0
=> ()
