tests/snapshots/snapshots__interpreter@mask.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/mask.pr
---
3
110
77
23
45
=> ()
