tests/snapshots/snapshots__interpreter@math_constants.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/math_constants.pr
---
1.4142135623730951
0.7071067811865476
0.6931471805599453
2.302585092994046
1.4426950408889634
0.4342944819032518
1.618033988749895
1.5707963267948966
0.7853981633974483
0.3183098861837907
=> ()
