tests/snapshots/snapshots__interpreter@mergesort.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/mergesort.pr
---
1
2
3
4
5
6
7
8
9
=> ()
