tests/snapshots/snapshots__interpreter@multishot_thunk_param.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/multishot_thunk_param.pr
---
[1, 1]
=> ()
