tests/snapshots/snapshots__interpreter@named_handlers.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/named_handlers.pr
---
1
2
12
70
=> ()
